content/browser/renderer_host/render_widget_host_view_child_frame.cc
@@ -271,6 +271,14 @@ bool RenderWidgetHostViewChildFrame::IsShowing() {
   return !host()->is_hidden();
 }
 
+void RenderWidgetHostViewChildFrame::WasOccluded() {
+  Hide();
+}
+
+void RenderWidgetHostViewChildFrame::WasUnOccluded() {
+  Show();
+}
+
 gfx::Rect RenderWidgetHostViewChildFrame::GetViewBounds() const {
   gfx::Rect rect;
   if (frame_connector_) {
